<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Devfest</string>
    <string name="header1">DevFest SPB</string>
    <string name="header2">Dart: второе пришествие</string>
    <string name="button_android">Frontend</string>
    <string name="button_doc2">Все Спикеры</string>
    <string name="speaker">EVGENY KOT</string>
    <string name="prof">Teamlead at Wrike</string>
    <string name="adres">St. Petersburg, Russia</string>
    <string name="twitter">Twitter</string>
    <string name="telegram">telegram</string>
    <string name="time">16:35</string>
    <string name="date">27 November</string>
    <string name="photo">photo</string>
    <string name="room">Room2</string>
    <string name="flag">Флаг</string>
    <string name="description1">Привет, я - Кот. И ещё GDE в Dart и Flutter. И работаю во Wrike. Так получилось, что мы
        используем Dart в течение четырёх лет и написали огромную кучу кода (около 1kk строк). Мы пишем наш сервис
        используя на фронтенде исключительно в Dart (вообще нет JS). Также есть некоторое количество бекенда, ну и с
        появлением Flutter мы, конечно, начинаем смотреть на мобильную разработку. Можно без зазрения совести сказать,
        что мы раньше всех начали использовать этот язык в production разработке. Что же такого поменялось за эти годы в
        языке, в технологиях и мире, что вам НУЖНО ПОСЛУШАТЬ этот доклад? Вот об этом и поговорим.
    </string>
    <string name="descriptionAuthor">Начинал с C++ и железяк, потом переключился на .Net и C#. Работал много где, но
        как-то так получилось, что работая в Dell пришлось заниматься CoffeeScript и фронтендом ¯\_(ツ)_/¯. Сейчас
        работаю во Wrike, высоконагруженном SAAS приложении с очень богатым клиентским кодом, который мы пишем на Dart и
        Angular. Участник программного комитета HolyJS, спикер. Google Developer Expert.
    </string>
</resources>
