<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto">

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
            android:id="@+id/photo"
            android:layout_width="30dp"
            android:layout_height="100dp"
            android:src="@drawable/telegram"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/photo"
    />

    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/speaker"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@id/photo"
            tools:ignore="MissingConstraints" />

    <TextView
            android:id="@+id/prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/prof"
            app:layout_constraintLeft_toRightOf="@id/name"
            tools:ignore="MissingConstraints" />

    <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/adres"
            app:layout_constraintTop_toBottomOf="@id/prof"
            app:layout_constraintLeft_toRightOf="@id/name" />
</android.support.constraint.ConstraintLayout>
</LinearLayout>